--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ nosetests.xml
 # Translations
 *.mo
 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+.idea
+
+*.dson
+*.pid
+web/logs
